feat: Item controller 수정