@@ -1,5 +1,7 @@
 package com.thekey.stylekeyserver.item.controller;
 
+import com.thekey.stylekeyserver.common.ApiResponse;
+import com.thekey.stylekeyserver.common.ErrorCode;
 import com.thekey.stylekeyserver.coordinatelook.service.CoordinateLookAdminService;
 import com.thekey.stylekeyserver.item.domain.Item;
 import com.thekey.stylekeyserver.item.dto.response.ItemResponse;
@@ -8,8 +10,9 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -26,44 +29,34 @@ public class ItemAdminController {
 
     @GetMapping("/{id}")
     @Operation(summary = "Read One Item", description = "아이템 정보 단건 조회")
-    public ResponseEntity<ItemResponse> getItem(@PathVariable Long id) {
+    public ApiResponse getItem(@PathVariable Long id) {
         Optional<Item> optional = Optional.ofNullable(itemAdminService.findById(id));
 
-        return optional
-                .map(item -> {
-                    ItemResponse response = ItemResponse.of(item);
-                    return ResponseEntity.ok(response);
-                }).orElse(ResponseEntity.notFound().build());
+        return optional.map(item -> {
+            ItemResponse response = ItemResponse.of(item);
+            return ApiResponse.success(response);
+        }).orElse(ApiResponse.fail(HttpStatus.BAD_REQUEST, ErrorCode.BAD_REQUEST.getMessage()));
     }
 
     @GetMapping
     @Operation(summary = "Read All Items", description = "아이템 정보 전체 조회")
-    public ResponseEntity<List<ItemResponse>> getItems() {
+    public ApiResponse<List<ItemResponse>> getItems() {
         List<Item> items = itemAdminService.findAll();
-
-        if (items.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
         List<ItemResponse> responses = items.stream()
                 .map(ItemResponse::of)
-                .toList();
+                .collect(Collectors.toList());
 
-        return ResponseEntity.ok(responses);
+        return ApiResponse.success(responses);
     }
 
     @GetMapping("/coordinate-looks/{id}")
     @Operation(summary = "Read All Items By CoordinateLookId", description = "코디룩 ID에 해당하는 아이템 목록 전체 조회")
-    public ResponseEntity<List<ItemResponse>> getItemsByCoordinateLookId(@PathVariable Long id) {
+    public ApiResponse<List<ItemResponse>> getItemsByCoordinateLookId(@PathVariable Long id) {
         List<Item> items = itemAdminService.findAllByCoordinateLookId(id, coordinateLookAdminService);
-
-        if (items.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-
         List<ItemResponse> responses = items.stream()
                 .map(ItemResponse::of)
                 .toList();
 
-        return ResponseEntity.ok(responses);
+        return ApiResponse.success(responses);
     }
 }
